// Copyright (c) 2023 Sri Lakshmi Kanthan P
//
// This software is released under the MIT License.
// https://opensource.org/licenses/MIT

syntax = "proto3";

package com.srilakshmikanthanp.clipbirdroid;

message InvalidRequest {
  uint32 packet_length = 1;
  uint32 packet_type = 2;
  uint32 error_code = 3;
  bytes error_message = 4;
}
